--- a/example-pdf.qmd
+++ b/example-pdf.qmd
@@ -4,6 +4,7 @@ author: "Emma Rand"
 format:
   pdf:
     documentclass: article
+    fig-pos: 'H'
     papersize: A4
     mainfont: Calibri
     geometry:
@@ -46,9 +47,10 @@ options(digits = 2)
 
 # Introduction
 
-A number of [subspecies of the common chaffinch, *Fringilla coelebs*](https://en.wikipedia.org/wiki/Common_chaffinch), have been described based principally on the differences in the pattern and colour of the adult male plumage [@suárez2009]. Two of groups of these subspecies are the "coelebs group" (@fig-coelebs) that occurs in Europe and Asia and the "canariensis group" (@fig-canariensis) that occurs on the Canary Islands. 
+A number of [subspecies of the common chaffinch, *Fringilla coelebs*](https://en.wikipedia.org/wiki/Common_chaffinch), have been described based principally on the differences in the pattern and colour of the adult male plumage [@suárez2009]. Two of groups of these subspecies are the "coelebs group" (@fig-coelebs) that occurs in Europe and Asia and the "canariensis group" (@fig-canariensis) that occurs on the Canary Islands.  
 
-::: {#fig-subspecies layout-ncol="2"}
+
+::: {#fig-subspecies layout-ncol=2}
 
 ![*F. c. coelebs*](images/512px-Chaffinch_(Fringilla_coelebs).jpg){#fig-coelebs}
 
@@ -202,6 +204,47 @@ chaff_summary |>
 
 ```
 
+
+I have created a mutli-column figure with mixed content. Take a look at @fig-mixedcontent. You can see two histograms in @fig-hist and @fig-hist2. There is also a photo of a chaffinch in @fig-coelebs2.
+
+
+::: {#fig-mixedcontent layout-ncol=2}
+
+```{r}
+#| label: fig-hist
+hist(rnorm(100), title = "just some histogram")
+```
+```{r}
+#| label: fig-hist2
+hist(rnorm(200), title = "another histogram")
+
+```
+
+![*F. c.
+coelebs*](images/512px-Chaffinch_(Fringilla_coelebs).jpg){#fig-coelebs2}
+
+
+```{r}
+#| label: fig-table
+chaff_summary |> 
+  mutate(subspecies = str_to_sentence(subspecies)) |> 
+  knitr::kable(caption = "Summary of mass(g) for the two subspecies of chaffinch.",
+               col.names = names(chaff_summary) |> str_to_sentence())
+
+```
+
+
+
+
+A figure with a some plots and a photo. There's even a table in there although, IMO tables should not be in figures, but placed separately. I had to use the fig- prefix in the label to get make it be treated like a figure with caption below etc.
+
+:::
+
+
+
+
+
+
 # Discussion
 
 Here we pick up points from the introduction.
@@ -213,7 +256,20 @@ Here we pick up points from the introduction.
 
 {{< pagebreak >}}
 
-# Supplemental Figures 
+
+
+# Supplemental 
+
+
+## Files
+
+::: {#suppfile-chaff}
+
+[chaff.txt](data-raw/chaff.txt) 
+
+:::
+
+## Figures
 
 ::: {#suppfig-chaff-dist2}
 ```{r}
@@ -234,13 +290,6 @@ ggplot(data = chaff, aes(x = mass, fill = subspecies)) +
 
 Here's that same figure again, but this time it's in the supplemental
 material.
-:::
-
-::: {#suppfile-chaff}
-
-[chaff.txt](data-raw/chaff.txt) 
-
-
 :::
 
 
